# VetOnce-Bon-Recovery

./: .bondiagnistics.txt.kate-swp  .env.example  .gitignore  AGENT_OPERATION_LOG.txt  BON_ENGINE_IO.md  CVE-1456319-50000  GitHub - VetOnce_best-of-n-prompt-jailbreaker_ This application implements the Best-of-N Jailbreaking (BoN) method, which focuses on exploiting vulnerabilities in AI models..html  INTEGRATION_PLAN.md  LICENSE  README.md  SourceRollup.txt  Table of contents.md  UI_TO_AND_FROM_ENGINE.xlsx  UI_TO_AND_FROM_LM-STUDIO.xlsx  UI_TO_AND_FROM_LMS_CLI_or_LOGS.xlsx  best-of-n-prompt-jailbreaker_.eslintrc.json at master · VetOnce_best-of-n-prompt-jailbreaker · GitHub.html  best-of-n-prompt-jailbreaker_components.json at master · VetOnce_best-of-n-prompt-jailbreaker · GitHub.html  best-of-n-prompt-jailbreaker_package.json at master · VetOnce_best-of-n-prompt-jailbreaker · GitHub.html.txt  best-of-n-prompt-jailbreaker_tsconfig.json at master · VetOnce_best-of-n-prompt-jailbreaker · GitHub.html  completeness_report.md  debug_python_augmentations.py  eslintrc.json  final_test_log.txt  final_trace.txt  final_trace_with_fix.txt  full_suite_status.txt  generate_bon_golden_values.py  main.py  npx_vitest_output.txt  package-lock.json  package.json  pnpm-lock.yaml  post_fix_test_log.txt  pyproject.toml  requirements.txt  source1.html  source5.html  tailwind.config.ts  test_failure_log.txt  ts_trace.txt  (+2 more)
app/: globals.css  layout.tsx  page.tsx
archive/: Directives  SourceRollup.txt  source2.html  source4.html  source6.html
components/: llm-configuration.tsx
(+76 files in other folders)
